修正图片不展示问题

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 		<div class="phold" style="height:7.2%"></div>
 		<div id="message-box" class="message-box">
 			<div class="message-inner">
-				<form id="msgform" action="words.php" method="post">
+				<form id="msgform" action="bend/words.php" method="post">
 					<input type="hidden" name="dosubmit" value="true">
 					<input id="color-box" type="hidden" name="color" value="#ff6485">
 					<div class="message-input-wrap">
